tests/type/errors/assign_type_mismatch.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

scene main
{
	var a = 1;
	a = true;
}
